--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=EcoleIntraSpringBootApplication
 spring.datasource.url=jdbc:h2:mem:demointra;DB_CLOSE_DELAY=-1
 spring.h2.console.enabled=true
+#spring.jpa.show-sql=true
+
